--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,26 +1,53 @@
 {
     "cSpell.words": [
         "appendchild",
+        "ატარე",
+        "გაგზავნა",
+        "გაიმეორე",
         "გახადეთ",
+        "გვარი",
         "გუნდი",
+        "დაეთანხმო",
         "დიზაინისა",
+        "ემთხვევა",
+        "ვეთანხმები",
+        "ველი",
         "თანამგზავრი",
         "თქვენი",
+        "იყოს",
         "კონტაქტი",
         "ლინკები",
         "მაღაზია",
+        "მეილი",
+        "მზადდება",
         "მთავარი",
+        "მომხმარებლის",
+        "მოძებნე",
         "მუდმივი",
         "ნაქსოვი",
         "ონლაინ",
+        "პაროლი",
+        "პაროლის",
+        "პირობებს",
         "სამოსი",
         "სამოსის",
+        "სარეგისტრაციო",
         "სასურველი",
+        "სახელი",
+        "სახელის",
+        "სიყვარულით",
+        "უნდა",
+        "ფანჯარა",
         "ფერის",
+        "ფორმა",
+        "ქართული",
+        "შენი",
         "შესახებ",
         "შეუკვეთეთ",
         "ჩვენ",
         "ჩვენი",
+        "ცარიელი",
+        "წესებს",
         "ხელით"
     ]
 }
