--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "appendchild",
+        "Cუკან",
         "ატარე",
         "გაგზავნა",
         "გაიმეორე",
@@ -21,6 +22,7 @@
         "მეილი",
         "მზადდება",
         "მთავარი",
+        "მომხმარებელი",
         "მომხმარებლის",
         "მოძებნე",
         "მუდმივი",
@@ -36,6 +38,7 @@
         "სახელი",
         "სახელის",
         "სიყვარულით",
+        "უკან",
         "უნდა",
         "ფანჯარა",
         "ფერის",
