--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,7 @@
         "პაროლი",
         "პაროლის",
         "პირობებს",
+        "რეგისტრაცია",
         "სამოსი",
         "სამოსის",
         "სარეგისტრაციო",
