add slider, change styles

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "ატარე",
         "გაგზავნა",
         "გაიმეორე",
+        "გალერეა",
         "გახადეთ",
         "გვარი",
         "გუნდი",
@@ -45,8 +46,10 @@
         "ფერის",
         "ფორმა",
         "ქართული",
+        "შეკვეთა",
         "შენი",
         "შესახებ",
+        "შეუკვეთე",
         "შეუკვეთეთ",
         "ჩვენ",
         "ჩვენი",
